--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,8 +2,7 @@ body {
   font-family: 'Kodchasan', sans-serif;
   font-size: 18px;
   line-height: 34px;
-  color: #777;
-  background: black;
+  background-color: #000000;
 }
 
 * {
@@ -47,6 +46,11 @@ h1 {
 h2,
 h3 {
   font-size: 22px;
+}
+
+h5 {
+  color: #ffae00;
+  font-size: 150%;
 }
 
 /* header */
@@ -216,6 +220,11 @@ input[type=submit] {
   border: 0 none;
 }
 
+.card-body {
+  background-color: #000000;
+  border-color: #ffae00;
+}
+/* media responsive size adjustments */
 @media screen and (max-width: 980px) {
   #masthead {
     position: fixed;
